Fix Dark Mode for custom project picture selection dialog
Summary:
Do not hardcode the icon foreground color `#e7e7e7` but use a similar color already existing as variable `{$lightgreybackground}`.

Refs T15056

Test Plan: * Go to http://phorge.localhost/project/picture/1/ and under "Custom", click "Choose Icon and Color..."

Reviewers: O1 Blessed Committers, mainframe98

Reviewed By: O1 Blessed Committers, mainframe98

Subscribers: tobiaswiese, valerio.bozzolan, Matthew, Cigaryno

Maniphest Tasks: T15056

Differential Revision: https://we.phorge.it/D26376

--- a/webroot/rsrc/css/application/people/people-profile.css
+++ b/webroot/rsrc/css/application/people/people-profile.css
@@ -38,7 +38,7 @@ form.compose-dialog {
 }
 
 .compose-dialog .compose-icon-bg.phui-icon-view {
-  color: #e7e7e7;
+  color: {$lightgreybackground};
   line-height: 48px;
   width: 48px;
   text-align: center;
